Replace logo image format from JPG to PNG

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>WoodWorkz — Interieurbouw, Onderhoud & Reparaties</title>
     <meta name="description" content="WoodWorkz is uw specialist in interieurbouw, onderhoud en reparaties. Vakmanschap met oog voor detail.">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="images/logo.jpg" type="image/jpeg">
+    <link rel="icon" href="images/logo.png" type="image/png">
 </head>
 <body>
 
@@ -14,7 +14,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <img src="images/logo.jpg" alt="WoodWorkz logo" class="nav__logo-img">
+                <img src="images/logo.png" alt="WoodWorkz logo" class="nav__logo-img">
                 <span class="nav__logo-text">WoodWorkz</span>
             </a>
             <button class="nav__toggle" id="nav-toggle" aria-label="Menu openen">
@@ -164,7 +164,7 @@
             </div>
             <div class="about__visual">
                 <div class="about__logo-showcase">
-                    <img src="images/logo.jpg" alt="WoodWorkz" class="about__logo-img">
+                    <img src="images/logo.png" alt="WoodWorkz" class="about__logo-img">
                 </div>
             </div>
         </div>
@@ -253,7 +253,7 @@
     <footer class="footer">
         <div class="container footer__content">
             <div class="footer__brand">
-                <img src="images/logo.jpg" alt="WoodWorkz" class="footer__logo">
+                <img src="images/logo.png" alt="WoodWorkz" class="footer__logo">
                 <span class="footer__name">WoodWorkz</span>
             </div>
             <p class="footer__copy">&copy; 2026 WoodWorkz. Alle rechten voorbehouden.</p>
