Update logo image source to logo_large.png

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
             <div class="about__visual">
                 <div class="about__logo-showcase">
-                    <img src="images/logo.png" alt="WoodWorkz" class="about__logo-img">
+                    <img src="images/logo_large.png" alt="WoodWorkz" class="about__logo-img">
                 </div>
             </div>
         </div>
