--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="container hero__content">
-            <h1 class="hero__title">Vakmanschap<br>in hout</h1>
+            <h1 class="hero__title">Keukens, (inbouw) kasten, interieurs en projecten</h1>
             <p class="hero__subtitle">Interieurbouw, onderhoud en reparaties — met oog voor detail en liefde voor het vak.</p>
             <div class="hero__actions">
                 <a href="#contact" class="btn btn--primary">Neem contact op</a>
